--- a/app/globals.css
+++ b/app/globals.css
@@ -89,6 +89,7 @@ body {
     @apply border-border;
   }
   body {
-    @apply bg-background text-foreground;
+    background-color: #281f20;
+    @apply text-foreground;
   }
 }
