--- a/app/globals.css
+++ b/app/globals.css
@@ -89,7 +89,7 @@ body {
     @apply border-border;
   }
   body {
-    background-color: #281f20;
+    background-color: #0d6c992e;
     @apply text-foreground;
   }
 }
